[FIX] Time axe visible wo scrolling

--- a/interface/src/theme/theme.scss
+++ b/interface/src/theme/theme.scss
@@ -6,7 +6,7 @@
 html,
 body {
   margin: 0;
-  height: 100%;
+  height: 90%;
   width: 100%;
   background: #a0a0a0;
 }
